remove scrollbar, fix #17

--- a/src/css/dark.css
+++ b/src/css/dark.css
@@ -137,12 +137,3 @@
     }
   }
 }
-
-@media screen and (min-width: 768px) {
-  .dark pre::-webkit-scrollbar-thumb {
-    background-color: rgba(95, 95, 95, 0.78);
-    &:hover {
-      background-color: #525252;
-    }
-  }
-}
